[package]
name = "yengine"
version = "0.1.0"
edition = "2021"
authors = [
    "GZTime <Time.GZ@outlook.com>",
    "Zhengty <1051655293@qq.com>",
    "cychester <chenych89@mail2.sysu.edu.cn>",
    "chengy-sysu <939416532@qq.com>"
]
description = "Y-Engine Rust Core for MySQL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "yengine"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
cxx = "1.0"
log = "0.4"
once_cell = "1.16.0"
tokio = { version = "1", features = ["fs", "io-util", "io-std", "macros", "process", "signal", "test-util", "rt-multi-thread"] }

[build-dependencies]
cxx-build = "1.0"
cc = "1.0"
