[package]
name = "yydb"
version = "0.3.0"
edition = "2021"
authors = [
    "GZTime <Time.GZ@outlook.com>",
    "Zhengty <1051655293@qq.com>",
    "cychester <chenych89@mail2.sysu.edu.cn>",
    "chengy-sysu <939416532@qq.com>"
]
description = "YYDB Rust Core for MySQL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
cxx = "1.0"
log = "0.4"
rand = "0.8"
futures = "0.3"
avl = "0.6"
growable-bloom-filter = "2.0.1"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
crc32fast = "1.3"
async-trait = "0.1"
chrono = "0.4"
async-compression = { version = "0.3", features = ["tokio", "deflate"] }
lazy_static = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "fs",
    "signal",
    "io-util"
] }

[build-dependencies]
cxx-build = "1.0"
