[package]
name = "yengine_bridge"
version = "0.1.0"
edition = "2021"
authors = [
    "GZTime <Time.GZ@outlook.com>",
    "Zhengty <1051655293@qq.com>",
    "cychester <chenych89@mail2.sysu.edu.cn>",
    "chengy-sysu <939416532@qq.com>"
]
description = "A bridge between Y-Engine Rust Core and MySQL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
