[package]
name = "yengine_core"
version = "0.1.0"
edition = "2021"
authors = [
    "GZTime <Time.GZ@outlook.com>",
    "Zhengty <1051655293@qq.com>",
    "cychester <chenych89@mail2.sysu.edu.cn>",
    "chengy-sysu <939416532@qq.com>"
]
description = "Y-Engine Rust Core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bridge = { package = "yengine_bridge", path = "../bridge" }
